--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@ember/test-helpers": "^3.3.0",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "autoprefixer": "^10.4.20",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.2.2",
+    "daisyui": "^4.12.14",
     "ember-auto-import": "^2.7.4",
     "ember-cli": "~5.10.0",
     "ember-cli-app-version": "^6.0.1",
@@ -43,15 +45,19 @@
     "ember-cli-dependency-checker": "^3.3.2",
     "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-postcss": "^8.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-composable-helpers": "^5.0.0",
     "ember-data": "~5.3.8",
     "ember-fetch": "^8.1.2",
+    "ember-heroicons": "^0.5.0",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.2.0",
     "ember-page-title": "^8.2.3",
     "ember-qunit": "^8.1.0",
     "ember-resolver": "^11.0.1",
+    "ember-set-helper": "^3.0.1",
     "ember-source": "~5.10.0",
     "ember-template-lint": "^5.13.0",
     "ember-welcome-page": "^7.0.2",
@@ -68,6 +74,7 @@
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-prettier": "^4.1.0",
+    "tailwindcss": "^3.4.14",
     "tracked-built-ins": "^3.3.0",
     "webpack": "^5.92.1"
   },
@@ -76,5 +83,9 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "firebase": "^11.0.1"
   }
 }
